Update Vercel config to properly exclude frontend and specify build commands

--- a/work/My projects/lovable_ditto_hackathon/.vercelignore
+++ b/work/My projects/lovable_ditto_hackathon/.vercelignore
@@ -1,8 +1,15 @@
+# Frontend files - exclude from backend deployment
+frontend/
+frontend/ditto-hackathon/
+frontend/ditto-hackathon/**
+
+# Development files
 node_modules
 .env
 src
 tsconfig.json
 test-*.js
 test-*.html
-frontend/
-frontend/ditto-hackathon/
+
+# Build artifacts (keep dist/ for deployment)
+build/
